resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site
  labels:
    app: personal-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      containers:
        - name: site
          image: docker.brentahughes.com:443/personal-website:v1
          ports:
            - containerPort: 8080
