resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
spec:
  type: ClusterIP
  selector:
    app: personal-site
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
